<resources>
    <string name="app_name">TravelInfro</string>
    <string name="travel_search">관광정보 검색:</string>
    <string name="travel_location">지역:</string>
    <string name="travel_type">타입:</string>
    <string name="travel_btn_search">검색</string>
    <string name="sign_in_btn_log_in">로그인</string>
    <string name="sign_in_btn_sign_in">회원가입</string>
    <string name="sign_in_edt_email">이메일</string>
    <string name="sign_in_edt_pwd">비밀번호</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="heading_recent">최신글</string>
    <string name="heading_my_posts">내가 쓴글</string>
    <string name="heading_my_top_posts">내가 쓴 인기글</string>
    <string name="new_post_title">제목</string>
    <string name="new_post_content">내용</string>
    <string name="post_detail_post">확인</string>
    <string name="post_detail_write_comments">댓글 작성</string>
    <string name="logo">LIS</string>
</resources>
