<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TravelActivity">

    <LinearLayout
        android:id="@+id/travel_ll_search"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:paddingLeft="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/travel_ll_show">
        <TextView
            android:text="@string/travel_search"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:id="@+id/travel_tv_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:gravity="center_vertical"
                android:text="@string/travel_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatSpinner
                android:spinnerMode="dropdown"
                android:id="@+id/travel_sp_state"
                android:layout_width="150dp"
                android:layout_height="50dp"/>
            <androidx.appcompat.widget.AppCompatSpinner
                android:spinnerMode="dropdown"
                android:id="@+id/travel_sp_city"
                android:layout_width="150dp"
                android:layout_height="50dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/travel_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatSpinner
                android:spinnerMode="dropdown"
                android:id="@+id/travel_sp_type"
                android:layout_width="150dp"
                android:layout_height="50dp"/>
            <Button
                android:id="@+id/travel_btn_search"
                android:text="@string/travel_btn_search"
                android:backgroundTint="@color/board_button_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/travel_ll_show"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/travel_ll_search">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/travel_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>